--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ next-env.d.ts
 
 # large media (exceeds GitHub 100MB limit; host elsewhere)
 /public/video.mp4
+/public/wedding-ceremony.mp4
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
